# genppi

./: .gitignore  README.md  plotting
.github/workflows/: main.yml  master.yml
binaries/: README  countdots  countdots-Linux  genppi  genppidb  valifasta  valifasta-Linux
doc/: README.md
doc/RIS_Analysis/: GenppiGephiRIS.py
doc/RIS_Analysis/FCSV/: F30.csv  F39.csv  F42.csv
genppi/: __init__.py
genppi_py/: MAINTAINERS.md  MANIFEST.in  README.md  dev.py  install.bat  install.sh  pyproject.toml  setup.py
genppi_py/docs/: README.md  deployment.tex  testing.tex
genppi_py/genppi_py/: __init__.py  cli.py  download_model.py  download_model_direct.py  download_samples.py  genppi.py
genppi_py/scripts/: README.md  build_and_test.py  deploy_production.py  deploy_test.py  quick_check.py  test_installation.py  test_upload.py
genppi_py/tests/: README.md  test_genppi.py
genppi_py/tools/: README.md  prepare_release.py  requirements-dev.txt  tox.ini
plotting/: README.md  figure4.R
src/: compile  compile-batch-Linux  compile-batch-Windows.bat  compile4g  countdots.c  countdots.compile  features.asd  features.lisp  genppi-db.lisp  genppi.lisp  genppidb.lisp  splitfasta.c
src/plots/: README  figure1.R  figure3.R  figure5.R  genppivisual  verticalsplit
src/plotting/: figure2.R
src/tools/: count_intersect_distinct.sql  countdots.c  craftting-RF-training-model.lisp  makearff.bash  random-forest.asd  random-forest.lisp  related_genomes.py  summarizing-in.R
test/: Ba_G002_example.gephi  README  README.md
valifasta/: main.c  validador.c  validador.h
(+309 files in other folders)
